New FrostyBoy Sandbox/src/objects/TotalCheckConnector__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>TCPassword__c</fullName>
        <label>TCPassword</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TCUsageCount__c</fullName>
        <defaultValue>1</defaultValue>
        <label>TCUsageCount</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TCUsername__c</fullName>
        <label>TCUsername</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trial_User__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Trial User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Used_Promocode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Used Promocode</label>
        <type>Checkbox</type>
    </fields>
    <label>TotalCheck Connector</label>
</CustomObject>